crates/strider/tests/snapshots/v2__arm_be__complex__if_bit_clear_call.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ d1", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x100d8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "17" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "18" -> "6" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "19" -> "6" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "17" -> "6" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "19" -> "6" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "20" -> "6" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "21" -> "6" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "21" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "23" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "29" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "31" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "33" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "35" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "37" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ d0", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "39" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v40" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v40" [color="#888888", style=dashed];
  "v40" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "39" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ r1", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v41" [color="#888888", style=dashed];
  "v41" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="φ r0", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v42" [color="#888888", style=dashed];
  "v42" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
